--- a/src/admin.html
+++ b/src/admin.html
@@ -5,15 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
+
+    <style>
+      .form {
+        display: flex;
+        flex-direction: column;
+        width: 500px;
+      }
+    </style>
   </head>
   <body>
-    <form>
-      <input type="text" name="title" />
-      <input type="text" name="author" />
+    <form class="form">
+      <input type="text" name="title" placeholder="Title" />
+      <input type="text" name="author" placeholder="Author" />
 
-      <textarea name="description" id="" cols="30" rows="10"></textarea>
+      <textarea
+        name="description"
+        id=""
+        cols="30"
+        rows="10"
+        placeholder="Description"
+      ></textarea>
 
-      <button>Create</button>
+      <button class="">Create</button>
     </form>
     <script src="./admin.js"></script>
   </body>
